documentação pendente de revisão
