# server/routes/usersRoute.js
@@ -4,10 +4,10 @@ const usersController = require('../controller/usersController');
 const authController = require('../controller/authController');
 
 
-router.get("/", authController.auth, usersController.getAllUsers);
-router.get("/:uid", authController.auth, usersController.getUserById);
-router.post("/", authController.auth, usersController.postUser);
-router.put("/:uid", authController.auth, usersController.putUser);
-router.delete("/:uid", authController.auth, usersController.deleteUser);
+router.get("/", usersController.getAllUsers);
+router.get("/:uid", usersController.getUserById);
+router.post("/", usersController.postUser);
+router.put("/:uid", usersController.putUser);
+router.delete("/:uid", usersController.deleteUser);
 
 module.exports = router;
