# swagger.json
@@ -3,25 +3,38 @@
  "info": {
    "title": "API Burger Queen",
    "description": "API developed for internal use of restaurants",
+   "termsOfService": "https://smartbear.com/terms-of-use/",
    "contact": {
      "email": "lizianegarciaa@gmail.com"
    },
    "version": "1.0.0"
  },
- "servers": [
+ "host": "https://sap006-burgerqueen-api.herokuapp.com/",
+ "tags": [
    {
-     "url": "https://sap006-burgerqueen-api.herokuapp.com"
+     "name": "Auth",
+     "description": "Access to authentication"
+   },
+   {
+     "name": "Users",
+     "description": "Operations about user"
+   },
+   {
+     "name": "Products",
+     "description": "Operations about products"
+   },
+   {
+     "name": "Orders",
+     "description": "Access to all orders"
    }
  ],
+ "schemes":["https","http"],
  "paths": {
   "/auth": {
     "post": {
       "summary": "Create a token",
       "description": "Create a new token",
       "tags":["Auth"],
-      "produces": [
-        "application/json"
-      ],
       "parameters": [
         {
           "name": "User",
@@ -53,7 +66,7 @@
             "$ref": "#/components/schemas/Auth"
         }
       }
-      }
+  }
     }
   },
   "/users": {
@@ -372,18 +385,26 @@
       "summary": "List all products",
       "description": "List of all products",
       "tags":["Products"],
-      "requestBody": {
-        "content": {
-          "application/json": {
-            "schema": {
-              "$ref": "#/components/schemas/Products"
-            }
-          }
+      "parameters": [
+        {
+          "name": "Authorization",
+          "description": "Auth Token",
+          "type": "string",
+          "in": "header",
+          "required": true
         }
-      },
+      ],
       "responses": {
        "401" : {
-         "description": "Unauthorized"
+         "description": "User not authenticated",
+         "content": {
+          "application/json" : {
+            "schema" : {
+             "type": "object",
+             "$ref":"#/components/schemas/Error"
+           }
+         }
+       }   
         },
         "200" : {
           "description": "Successful operation",
@@ -402,20 +423,48 @@
        "summary": "Create product",
        "description": "Create a new product",
        "tags":["Products"],
-       "requestBody": {
-         "content": {
-           "application/json": {
-             "schema": {
-               "$ref": "#/components/schemas/Products"
-             }
-           }
-         }
-       },
+       "parameters": [
+        {
+          "name": "Authorization",
+          "in": "header",
+          "description": "Auth Token",
+          "type": "string",
+          "required": true
+        },
+        {
+          "name": "Product",
+          "in": "body",
+          "description": "Informations about new product",
+          "type": "object",
+          "schema": {
+            "$ref": "#/components/schemas/Products"
+          }
+        }
+      ],
        "responses": {
-        "401" : {
-          "description": "Unauthorized"
+        "400" : {
+          "description": "Bad request",
+          "content": {
+            "application/json" : {
+              "schema" : {
+                "type": "object",
+                "$ref":"#/components/schemas/Error"
+              }
+            }
+          }
          },
-          "200" : {
+        "401" : {
+          "description": "User not authenticated",
+          "content": {
+            "application/json" : {
+              "schema" : {
+                "type": "object",
+                "$ref":"#/components/schemas/Error"
+              }
+            }
+          }
+         },
+          "201" : {
             "description": "Successful operation",
             "content": {
               "application/json" : {
@@ -434,19 +483,45 @@
       "summary": "Find product by ID",
       "description": "Returns a single product",
       "tags":["Products"],
-      "requestBody": {
-        "content": {
-          "application/json": {
-            "schema": {
-              "$ref": "#/components/schemas/Products"
+      "parameters": [
+        {
+          "name": "Authorization ",
+          "required": true,
+          "in": "header",
+          "type": "string",
+          "description": "Auth token"
+        },
+        {
+          "name": "productId ",
+          "description": "ID of product to return",
+          "type": "string",
+          "in": "path",
+          "required":true
+        }
+      ],
+      "responses": {
+        "401" : {
+          "description": "User not authenticated",
+          "content": {
+            "application/json" : {
+              "schema" : {
+                "type": "object",
+                "$ref":"#/components/schemas/Error"
+              }
             }
           }
-        }
-      },
-      "responses": {
-       "401" : {
-         "description": "Unauthorized"
-        },
+         },
+         "404" : {
+          "description": "Not found",
+          "content": {
+            "application/json" : {
+              "schema" : {
+                "type": "object",
+                "$ref":"#/components/schemas/Error"
+              }
+            }
+          }
+         },
         "200" : {
           "description": "Successful operation",
           "content": {
@@ -464,22 +539,53 @@
        "summary": "Update product",
        "description": "Update product data corresponding to the given ID",
        "tags":["Products"],
-       "requestBody": {
-         "content": {
-           "application/json": {
-             "schema": {
-               "$ref": "#/components/schemas/Products"
-             }
-           }
-         }
-       },
+       "parameters": [
+        {
+          "name": "Authorization",
+          "in": "header",
+          "required": true,
+          "type": "string",
+          "description": "Auth Token"
+        },
+        {
+          "name": "productId",
+          "description": "ID that need to be updated",
+          "required":true,
+          "type": "string",
+          "in": "path"
+        },
+        {
+          "name": "Product",
+          "in": "body",
+          "schema": {
+            "type": "object",
+            "$ref":"#/components/schemas/Products"
+          }
+        }
+      ],
        "responses": {
-        "401" : {
-          "description": "Unauthorized"
+        "400" : {
+          "description": "Bad request",
+          "content": {
+            "application/json" : {
+              "schema" : {
+                "type": "object",
+                "$ref":"#/components/schemas/Error"
+              }
+            }
+          }
          },
-         "400" : {
-           "description": "Product already exists!"
-          },
+         "401" : {
+          "description": "User not authenticated",
+          "content": {
+            "application/json" : {
+              "schema" : {
+                "type": "object",
+                "$ref":"#/components/schemas/Error"
+              }
+            }
+          }
+         },
           "200" : {
             "description": "Successful operation",
             "content": {
@@ -497,19 +603,45 @@
       "summary": "Delete product",
       "description": "Delete product corresponding to the given ID",
       "tags":["Products"],
-      "requestBody": {
-        "content": {
-          "application/json": {
-            "schema": {
-              "$ref": "#/components/schemas/Products"
+      "parameters": [
+        {
+          "name": "Authorization",
+          "in": "header",
+          "required": true,
+          "type": "string",
+          "description": "Auth Token"
+        },
+        {
+          "name": "productId",
+          "description": "The product that needs to be deleted",
+          "required":true,
+          "type": "string",
+          "in": "path"
+        }
+      ],
+      "responses": {
+        "400" : {
+          "description": "Bad request",
+          "content": {
+            "application/json" : {
+              "schema" : {
+                "type": "object",
+                "$ref":"#/components/schemas/Error"
+              }
             }
           }
-        }
-      },
-      "responses": {
-       "401" : {
-         "description": "Unauthorized"
-        },
+         },
+         "401" : {
+          "description": "User not authenticated",
+          "content": {
+            "application/json" : {
+              "schema" : {
+                "type": "object",
+                "$ref":"#/components/schemas/Error"
+              }
+            }
+          }
+         },
          "200" : {
            "description": "Successful operation",
            "content": {
@@ -527,21 +659,29 @@
    "/orders": {
     "get": {
       "summary": "List all orders",
-      "description": "List of all orders",
+      "description": "List all orders of the restaurant",
       "tags":["Orders"],
-      "requestBody": {
-        "content": {
-          "application/json": {
-            "schema": {
-              "$ref": "#/components/schemas/Orders"
+      "parameters": [
+        {
+          "name": "Authorization",
+          "in": "header",
+          "required": true,
+          "type": "string",
+          "description": "Auth Token"
+        }
+      ],
+      "responses": {
+        "401" : {
+          "description": "User not authenticated",
+          "content": {
+            "application/json" : {
+              "schema" : {
+                "type": "object",
+                "$ref":"#/components/schemas/Error"
+              }
             }
           }
-        }
-      },
-      "responses": {
-       "401" : {
-         "description": "Unauthorized"
-        },
+         },
         "200" : {
           "description": "Successful operation",
           "content": {
@@ -559,18 +699,47 @@
        "summary": "Create order",
        "description": "Create a new order",
        "tags":["Orders"],
-       "requestBody": {
-         "content": {
-           "application/json": {
-             "schema": {
-               "$ref": "#/components/schemas/Orders"
-             }
-           }
-         }
-       },
+       "parameters": [
+        {
+          "name": "Authorization",
+          "description": "Auth Token",
+          "type": "string",
+          "in": "header",
+          "required":true
+        },
+        {
+          "name": "Body",
+          "in": "body",
+          "description": "Information about order",
+          "required": true,
+          "type": "object",
+          "schema": {
+            "$ref": "#/components/schemas/Order"
+          }
+        }
+      ],
        "responses": {
+        "400" : {
+          "description": "Missing required data",
+          "content": {
+            "application/json" : {
+              "schema" : {
+                "type": "object",
+                "$ref":"#/components/schemas/Error"
+              }
+            }
+          }
+         },
         "401" : {
-          "description": "Unauthorized"
+          "description": "User not authenticated",
+          "content": {
+            "application/json" : {
+              "schema" : {
+                "type": "object",
+                "$ref":"#/components/schemas/Error"
+              }
+            }
+          }
          },
           "200" : {
             "description": "Successful operation",
@@ -591,19 +760,56 @@
       "summary": "Find order by ID",
       "description": "Returns a single order",
       "tags":["Orders"],
-      "requestBody": {
-        "content": {
-          "application/json": {
-            "schema": {
-              "$ref": "#/components/schemas/Orders"
+      "parameters": [
+        {
+          "name": "Authorization",
+          "in": "header",
+          "required": true,
+          "type": "string",
+          "description": "Auth Token"
+        },
+        {
+          "name": "orderId",
+          "in": "path",
+          "required": true,
+          "type": "string",
+          "description": "ID of user to return"
+        }
+      ],
+      "responses": {
+        "401" : {
+          "description": "User not authenticated",
+          "content": {
+           "application/json" : {
+             "schema" : {
+              "type": "object",
+              "$ref":"#/components/schemas/Error"
             }
           }
-        }
+        }   
+       },
+       "403" : {
+         "description": "Forbidden. User belongs to another restaurant",
+         "content": {
+          "application/json" : {
+            "schema" : {
+             "type": "object",
+             "$ref":"#/components/schemas/Error"
+           }
+         }
+       }   
       },
-      "responses": {
-       "401" : {
-         "description": "Unauthorized"
-        },
+      "404" : {
+       "description": "User not found",
+       "content": {
+        "application/json" : {
+          "schema" : {
+           "type": "object",
+           "$ref":"#/components/schemas/Error"
+         }
+       }
+     }   
+    },
         "200" : {
           "description": "Successful operation",
           "content": {
@@ -618,25 +824,75 @@
       }
     },
      "put": {
-       "summary": "Update order",
-       "description": "Update order data corresponding to the given ID",
+       "summary": "Update order status",
+       "description": "Update order status corresponding to the given ID",
        "tags":["Orders"],
-       "requestBody": {
-         "content": {
-           "application/json": {
-             "schema": {
-               "$ref": "#/components/schemas/Orders"
-             }
-           }
-         }
-       },
+       "parameters": [
+        {
+          "name": "Authorization ",
+          "in": "header",
+          "required": true,
+          "type": "string",
+          "description": "Auth token"
+        },
+        {
+          "name": "orderId",
+          "description": "ID that need to be updated",
+          "type": "string",
+          "in": "path",
+          "required": true
+        },
+        {
+          "name": "status",
+          "in": "body",
+          "description": "The new order status",
+          "required": true,
+          "type": "object",
+          "schema": {
+            "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                "example": "pending"
+                }
+            }
+          }
+        }
+      ],
        "responses": {
         "401" : {
-          "description": "Unauthorized"
-         },
-         "400" : {
-           "description": "Order already exists!"
-          },
+          "description": "User not authenticated",
+          "content": {
+           "application/json" : {
+             "schema" : {
+              "type": "object",
+              "$ref":"#/components/schemas/Error"
+            }
+          }
+        }   
+       },
+       "403" : {
+         "description": "Forbidden. User belongs to another restaurant",
+         "content": {
+          "application/json" : {
+            "schema" : {
+             "type": "object",
+             "$ref":"#/components/schemas/Error"
+           }
+         }
+       }   
+      },
+      "404" : {
+       "description": "Order not found",
+       "content": {
+        "application/json" : {
+          "schema" : {
+           "type": "object",
+           "$ref":"#/components/schemas/Error"
+         }
+       }
+     }   
+    },
           "200" : {
             "description": "Successful operation",
             "content": {
@@ -654,26 +910,63 @@
       "summary": "Delete order",
       "description": "Delete order corresponding to the given ID",
       "tags":["Orders"],
-      "requestBody": {
-        "content": {
-          "application/json": {
-            "schema": {
-              "$ref": "#/components/schemas/Orders"
+      "parameters": [
+        {
+          "name": "Authorization ",
+          "in": "header",
+          "required": true,
+          "type": "string",
+          "description": "Auth token"
+        },
+        {
+          "name": "orderId",
+          "description": "ID that need to be deleted",
+          "type": "string",
+          "in": "path",
+          "required": true
+        }
+      ],
+      "responses": {
+        "401" : {
+          "description": "User not authenticated",
+          "content": {
+           "application/json" : {
+             "schema" : {
+              "type": "object",
+              "$ref":"#/components/schemas/Error"
             }
           }
-        }
+        }   
+       },
+       "403" : {
+         "description": "Forbidden. User belongs to another restaurant",
+         "content": {
+          "application/json" : {
+            "schema" : {
+             "type": "object",
+             "$ref":"#/components/schemas/Error"
+           }
+         }
+       }   
       },
-      "responses": {
-       "401" : {
-         "description": "Unauthorized"
-        },
+      "404" : {
+       "description": "Order not found",
+       "content": {
+        "application/json" : {
+          "schema" : {
+           "type": "object",
+           "$ref":"#/components/schemas/Error"
+         }
+       }
+     }   
+    },
          "200" : {
            "description": "Successful operation",
            "content": {
              "application/json" : {
                "schema" : {
                  "type": "object",
-                 "$ref":"#/components/schemas/Products"
+                 "$ref":"#/components/schemas/Orders"
                }
              }
            }
@@ -763,6 +1056,34 @@
         }
        }
      },
+     "Order": {
+      "type": "object",
+      "properties": {
+        "client": {
+          "type": "string"
+        },
+        "table": {
+          "type": "number",
+          "example": 2
+        },
+        "products": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "number",
+                "example": 28
+              },
+              "qtd": {
+                "type": "number",
+                "example": 2
+              }
+            }
+          }
+        }
+      }
+    },
      "Orders": {
       "type": "object",
       "properties": {
